homelab-v6/apps/go-hello/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-hello
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-hello
  template:
    metadata:
      labels:
        app: go-hello
    spec:
      nodeSelector:
        kubernetes.io/hostname: raspberry
      containers:
        - name: go-hello
          image: registry.wguilherme.com/go-hello:20260329143917-6c8be540 # {"$imagepolicy": "flux-system:go-hello"}
          ports:
            - containerPort: 8080
