homelab-v6/apps/go-hello/deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: go-hello
  namespace: default
spec:
  selector:
    app: go-hello
  ports:
    - port: 80
      targetPort: 8080
